tests/suite/snapshots/suite__check__tests__check__bad-array-size2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-array-size2.xi:4:10]
   │
 4 │   d: int[i[5 + foo() + c[foo()]]]
   ·          ───────────┬───────────  
   ·                     ╰───────────── Expected int but found bool
───╯

